eval_outputs/diff_and_source_code/code_change_and_test_change/fourth/google/refined_zero-shot.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/refined_zero-shot.spec.ts: Unexpected token, expected "," (20:9)

  18 |
  19 |   return (
> 20 |     <div className="w-full p-6">
     |          ^
  21 |       <h1 className="text-4xl font-bold text-gray-900 dark:text-white mb-6">
  22 |         Note Taking App
  23 |       </h1>

   at refined_zero-shot.spec.ts:20

  18 |
  19 |   return (
> 20 |     <div className="w-full p-6">
     |         ^
  21 |       <h1 className="text-4xl font-bold text-gray-900 dark:text-white mb-6">
  22 |         Note Taking App
  23 |       </h1>

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

